Fixing spacing

--- a/index.scss
+++ b/index.scss
@@ -17,7 +17,7 @@ body {
 
 #wrapper-nav {
   text-align: center;
-  margin-top: -1.2%;
+  margin-top: -1.5%;
 }
 
 #name {
